--- a/app/partials/pages/preview/_features.njk
+++ b/app/partials/pages/preview/_features.njk
@@ -61,7 +61,7 @@
                 <h2 class="title">Useful Features For A Standard Template</h2>
             </div>
         </div>
-        <div class="row featre-card-bottom justify-content-center">
+        <div class="row featre-card-bottom justify-content-center align-items-center">
             {% for item in cardData%}
                 <div class="col-lg-3 col-md-4 col-xs-6 col-9 col-xxl-3" data-aos="fade-up" data-aos-delay="{{ 100 * item.id }}" data-aos-duration="800">
                         {{Card.FeatureCard({
