--- a/app/partials/components/preloader.njk
+++ b/app/partials/components/preloader.njk
@@ -1,6 +1,16 @@
 
  <div class="preloader-wrapper" id="loader">
-    <div class="loading">
-        <img src="./image/loading.gif" alt="loading" class="w-100">
+  <div class="loader">
+    <div class="square"></div>
+    <div class="path">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
+  <p class="text-load">Loading</p>
+</div>
 </div>
