--- a/app/scss/components/_preloader.scss
+++ b/app/scss/components/_preloader.scss
@@ -11,65 +11,43 @@
   justify-content: center;
   background: #fff;
 }
-.text-load {
-  position: absolute;
-  bottom: -5px;
-  left: -70px;
-  font-weight: 500;
-  font-size: 16px;
-  color: var(--bs-dark);
+// Here is where the magic happens
+
+$offset: 187;
+$duration: 1.4s;
+
+.spinner {
+  animation: rotator $duration linear infinite;
 }
 
-.loader{
-    width: 80px;
-    height: 67px;
-    margin: auto;
-    position: relative;
+@keyframes rotator {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(270deg); }
 }
-.loader .square{
-    background: #009dff;
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    border-radius: 4px;
-  animation-fill-mode: both;
-    animation: motion 2.5s infinite cubic-bezier(0.89, 0.03, 0.06, 1.5);
+
+.path {
+  stroke-dasharray: $offset;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  animation:
+    dash $duration ease-in-out infinite, 
+    colors ($duration*4) ease-in-out infinite;
 }
-.loader .path{
-    height: 10px;
-    width: 110px;
-    overflow: hidden;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+
+@keyframes colors {
+	0% { stroke: #008AFF; }
+	50% { stroke: #222D39; }
+	100% { stroke: #36CD77; }
 }
-.loader .path > div{
-    background: #444;
-    width: 10px;
-    height: 10px;
-    border-radius: 2px;
-    margin: 0 15px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    animation-fill-mode: both;
-    animation: dynamic 5s infinite cubic-bezier(0.89, 0.03, 0.06, 1.5);
-}
-.loader .path > div:nth-child(1){ left: 40px; }
-.loader .path > div:nth-child(2){ left: 80px; }
-.loader .path > div:nth-child(3){ left: 120px; }
-.loader .path > div:nth-child(4){ left: 160px; }
-.loader .path > div:nth-child(5){ left: 200px; }
-.loader .path > div:nth-child(6){ left: 240px; }
-.loader .path > div:nth-child(7){ left: 280px; }
-@keyframes motion{
-    50%{ transform: rotate(90deg); }
-    100%{ transform: rotate(180deg); }
-}
-@keyframes dynamic{
-    0%{ transform: translateX(-40px); }
-    25%{ transform: translateX(-80px); }
-    50%{ transform: translateX(-120px); }
-    75%{ transform: translateX(-160px); }
-    100%{ transform: translateX(-200px); }
+
+@keyframes dash {
+ 0% { stroke-dashoffset: $offset; }
+ 50% {
+   stroke-dashoffset: $offset/4;
+   transform:rotate(135deg);
+ }
+ 100% {
+   stroke-dashoffset: $offset;
+   transform:rotate(450deg);
+ }
 }
