--- a/app/partials/pages/preview/_cta.njk
+++ b/app/partials/pages/preview/_cta.njk
@@ -4,9 +4,9 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-xl-6">
                     <div class="section-title-block text-center">
-                        <h2 class="title">IThink Unique And Be Creative Make a Differenece with BestKit</h2>
+                        <h2 class="title">I Think Unique And Be Creative Make a Difference with BestKit</h2>
                         <div class="button-group">
-                            <a class="btn btn-1 btn-primary" href="#">
+                            <a class="btn btn-1 btn-primary" href="https://1.envato.market/5bqQG9">
                                 Purchase Now
                                 <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
